--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.0",
     "firebase": "^12.2.1",
     "lucide-react": "^0.542.0",
     "nanoid": "^5.1.5",
